--- a/app/views/editor.html
+++ b/app/views/editor.html
@@ -2,6 +2,7 @@
 	<div class='container'>
 	<h1 class='title'>Title</h1>
 	</div>
+	Out of container
 </div>
 
 <div class='editorbar'>
@@ -20,10 +21,54 @@
 	  <a ng-click="bold()" href="" class="btn btn-default"><i class='fa fa-bold'></i></a>
 	  <a ng-click="italic()" href="" class="btn btn-default"><i class='fa fa-italic'></i></a>
 	  <a ng-click="underline()" href="" class="btn btn-default"><i class='fa fa-underline'></i></a>
-	  <a type="button" class="btn btn-default"><i class='fa fa-indent'></i></a>
-	  <a type="button" class="btn btn-default"><i class='fa fa-list'></i></a>
-	  <a type="button" class="btn btn-default"><i class='fa fa-list-ol'></i></a>
-	  <a type="button" class="btn btn-default"><i class='fa fa-image'></i></a>
+	  <a ng-click="indent()" href="" class="btn btn-default"><i class='fa fa-indent'></i></a>
+	  <a ng-click="unorderedlist()" href="" class="btn btn-default"><i class='fa fa-list'></i></a>
+	  <a ng-click="orderedlist()" href="" class="btn btn-default"><i class='fa fa-list-ol'></i></a>
+	  <a ng-click="image()" href="" class="btn btn-default"><i class='fa fa-image'></i></a>
+	  <a ng-click="container()" href="" class="btn btn-default"><i class='fa fa-columns'></i></a>
+	  <a data-toggle="modal" data-target="#myModal" href="" class="btn btn-default"><i class='fa fa-save'></i></a>
+
 
 	</div>
+</div>
+<!-- Save Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+    <form role="form">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">Save</h4>
+      </div>
+      <div class="modal-body">
+        
+		  <div class="form-group">
+		    <label for="exampleInputEmail1">Blog Title</label>
+		    <input type="text" class="form-control" id="blogtitle" placeholder="Enter Blog Title">
+		  </div>
+		  <div class="form-group">
+		    <label for="exampleInputEmail1">Blog URL</label>
+		    <input type="text" class="form-control" id="blogurlsimple">
+		  </div>
+
+		  <div class="form-group">
+		    <label for="exampleInputFile">File input</label>
+		    <input type="file" id="exampleInputFile">
+		    <p class="help-block">Example block-level help text here.</p>
+		  </div>
+		  <div class="checkbox">
+		    <label>
+		      <input type="checkbox"> Check me out
+		    </label>
+		  </div>
+		
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save</button>
+        <button type="button" ng-click="save()" data-dismiss="modal" class="btn btn-primary">Publish</button>
+      </div>
+    </form>
+    </div>
+  </div>
 </div>
