Added the ScotLug logo to the repository

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,5 +1,6 @@
 <div class='container'>
 	<h3>Administration</h3>
+	<div class='admin-toolbar'><a class='btn btn-primary' href='#/editor/create'><i class='fa fa-plus'></i> Create</a></div>
 	<table class='table'>
 		<thead>
 			<tr><th>Name</th><th>URL</th><th>Actions</th></tr>
