--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,7 +9,10 @@ $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
 
 body, html {
-  height: 100%
+  height: 100%;
+  font-size: 16px; 
+  /*font-size: 1em;*/
+  font-family: 'Open Sans', sans-serif;
 }
 
 #navbar-slick{
@@ -20,7 +23,7 @@ body, html {
 }
 
 .blogframe{
-  height: 500px;
+  height: 400px;
   width: 100%;
   background: url("../images/Munch_21.jpg");
   background-size: 100% auto;
@@ -35,7 +38,7 @@ body, html {
 
 
 .liveeditor{
-  min-height: 800px ;
+  min-height: 800px;
   z-index: 10;
 }
 
@@ -44,4 +47,8 @@ body, html {
   right: 20px;
   top: 60px;
   z-index: 20
+}
+
+.admin-toolbar{
+  float:right;
 }
