--- a/app/views/editor.html
+++ b/app/views/editor.html
@@ -1,12 +1,8 @@
-<div class='liveeditor' contenteditable='true'>
-		{{content}}
+<div class='liveeditor' ng-model='blogpost.content' contenteditable='true'>
 
 
 </div>
-	<div class='container'>
-	<h1 class='title'>Title</h1>
-	</div>
-	Out of container
+
 <div class='editorbar'>
 	<div class="btn-group">
 	  <div class="btn-group">
@@ -29,13 +25,15 @@
 	  <a ng-click="orderedlist()" href="" class="btn btn-default"><i class='fa fa-list-ol'></i></a>
 	  <a ng-click="image()" href="" class="btn btn-default"><i class='fa fa-image'></i></a>
 	  <a ng-click="container()" href="" class="btn btn-default"><i class='fa fa-columns'></i></a>
-	  <a data-toggle="modal" data-target="#myModal" href="" class="btn btn-default"><i class='fa fa-save'></i></a>
+
+	  <a ng-if='newBlogpost' data-toggle="modal" data-target="#createModal" href="" class="btn btn-primary"><i class='fa fa-save'></i></a>
+	  <a ng-if='!newBlogpost' ng-click='update() 'href="" class="btn btn-primary"><i class='fa fa-save'></i></a>
 
 
 	</div>
 </div>
 <!-- Save Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
     <form role="form">
@@ -46,23 +44,12 @@
       <div class="modal-body">
         
 		  <div class="form-group">
-		    <label for="exampleInputEmail1">Blog Title</label>
-		    <input type="text" class="form-control" id="blogtitle" placeholder="Enter Blog Title">
+		    <label for="blogtitle">Blog Title</label>
+		    <input type="text" class="form-control" ng-model='blogpost.name' ng-change='updateUrl(blogpost)' id="blogtitle" placeholder="Enter Blog Title">
 		  </div>
 		  <div class="form-group">
-		    <label for="exampleInputEmail1">Blog URL</label>
-		    <input type="text" class="form-control" id="blogurlsimple">
-		  </div>
-
-		  <div class="form-group">
-		    <label for="exampleInputFile">File input</label>
-		    <input type="file" id="exampleInputFile">
-		    <p class="help-block">Example block-level help text here.</p>
-		  </div>
-		  <div class="checkbox">
-		    <label>
-		      <input type="checkbox"> Check me out
-		    </label>
+		    <label for="blogurlsimple">Blog URL</label>
+		    <input type="text" class="form-control" ng-model='blogpost.url' id="blogurlsimple">
 		  </div>
 		
       </div>
